--- a/ABICCA-WEB/src/app/menu-nav/menu-nav.component.css
+++ b/ABICCA-WEB/src/app/menu-nav/menu-nav.component.css
@@ -1,12 +1,17 @@
 .toolbar {
-    display:flexbox;
-    justify-content: flex-end;
+    display:flex;
+    width: 100%;
+    height: 115px;
 }
 .abicca {
-    /* display: ; */
-    border: 1px, solid, black;
+    justify-self: flex-end;
+    align-content: center;
+    height: 100%;
+    /* border: 1px, solid, black; */
 }
 .buttons {
-    
-    border: 1px, solid, black;
+    margin-left: auto;
+    align-content: center;
+    height: 100%;
+    /* border: 1px, solid, black; */
 }
