--- a/ABICCA-WEB/src/app/app.component.html
+++ b/ABICCA-WEB/src/app/app.component.html
@@ -1,3 +1,12 @@
-<app-menu-nav></app-menu-nav>
+<header>
+    <app-menu-nav></app-menu-nav>
+</header>
 
+<body>
+    <app-associados></app-associados>
+</body>
+
+<footer>
+
+</footer>
 <router-outlet />
