adicionado campo imagem

--- a/ABICCA-WEB/src/app/app.component.html
+++ b/ABICCA-WEB/src/app/app.component.html
@@ -2,10 +2,13 @@
     <app-menu-nav></app-menu-nav>
 </header>
 
-<body>
+<div>
+    <app-imagens></app-imagens>
     <app-sobre></app-sobre>
     <app-associados></app-associados>
-</body>
+    <app-rodape></app-rodape>
+    
+</div>
 
 <footer>
 
