--- a/ABICCA-WEB/src/app/menu-nav/menu-nav.component.html
+++ b/ABICCA-WEB/src/app/menu-nav/menu-nav.component.html
@@ -8,7 +8,7 @@
         <a mat-button>Media Center</a>
         <a mat-button>Publicações</a>
         <a mat-button>Contato</a>
-        <a mat-button>Associe-se</a>
+        <a class="associe" mat-button>Associe-se</a>
     </div>
 
 </mat-toolbar>
