--- a/ABICCA-WEB/src/app/app.component.css
+++ b/ABICCA-WEB/src/app/app.component.css
@@ -1,11 +1,36 @@
-*{
-    font-size: 100%;
-    font-family: sans-serif;
+body {
+    margin: 0;
+    padding: 0;
+    width: fit-content;
+    height: fit-content;
 }
 
-header {
-    background-color: #fff;
+footer {
+    margin: 0;
+    padding: 0;
+    height: 200px;
 }
-body{
-    background-color:#fff;
+.cabecalho {
+    margin: 0;
+    padding: 0;
+    -webkit-mask-attachment: cover;
+    width: 100%;
+}
+.corpo{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-image: linear-gradient(45deg, #00ced1, #084d6e);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+.rodape {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(45deg, #00ced1, #084d6e);
 }
