--- a/ABICCA-WEB/src/app/menu-nav/menu-nav.component.css
+++ b/ABICCA-WEB/src/app/menu-nav/menu-nav.component.css
@@ -1,6 +1,5 @@
 .toolbar {
-    display:flex;
-    width: 100%;
+    display: flex;
     height: 115px;
 }
 .abicca {
@@ -14,4 +13,8 @@
     align-content: center;
     height: 100%;
     /* border: 1px, solid, black; */
+}
+
+.associe {
+    background-image: linear-gradient(180deg, #f5f5f5, #a0a0a0);
 }
