--- a/ABICCA-WEB/src/app/associados/associados.component.html
+++ b/ABICCA-WEB/src/app/associados/associados.component.html
@@ -17,6 +17,8 @@
             Tenha representatividade junto a órgãos governamentais.<br>
         </p>
 
-        <a class="bttn-SM" mat-button>Saiba mais</a>
+        <button class="bttn-SM" mat-button>
+          <span class="texto">Saiba mais</span>
+        </button>
     </div>
 </div>
