--- a/ABICCA-WEB/src/app/associados/associados.component.css
+++ b/ABICCA-WEB/src/app/associados/associados.component.css
@@ -19,23 +19,20 @@
     line-height: 1.5;
     letter-spacing: normal;
 
-    background-image: linear-gradient(45deg, #f5f5f5, #a0a0a0);
+    background-image: var(--fontDegrade1);
     background-size: 100%;
     background-repeat: repeat;
 
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-background-clip: text;
-    -moz-text-fill-color: red;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -moz-text-fill-color: transparent;
 }
 
 .imagem_ord {
     display: flex;
     column-gap:auto;
     justify-content: center;
-}
-
-.imagem img{
 }
 
 .texto {
@@ -49,13 +46,13 @@
     line-height: 1.5;
     letter-spacing: normal;
 
-    background-image: linear-gradient(45deg, #f5f5f5, #a0a0a0);
+    background-image: var(--fontDegrade1);
     background-size: 100%;
     background-repeat: repeat;
 
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
     -moz-text-fill-color: transparent;
 }
 
@@ -69,13 +66,13 @@
     margin-left: auto;
     margin-right: auto;
 
-    background-image: linear-gradient(45deg, #f5f5f5, #a0a0a0);
+    background-image: var(--fontDegrade1);
     background-size: 100%;
     background-repeat: repeat;
 
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
     -moz-text-fill-color: transparent;
 }
 
@@ -84,14 +81,18 @@
 .bttn-SM {
     display: flex;
     width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-
-    background: linear-gradient(135deg, #f5f5f5, #a0a0a0);
+    margin: 0 auto 20px;
+    background: var(--texto1);
+    box-shadow: 0 1px 12px var(--primaria);
 }
 
+.bttn-SM .texto {
+  color: var(--secundaria);
+}
+
+
 *::selection {
-    -webkit-text-fill-color: white; 
+    -webkit-text-fill-color: white;
     background-color: #027274;
 }
 
@@ -100,5 +101,5 @@ p::first-letter {
 }
 
 .bttn-SM:hover {
-    background-color: #00ced1;
+    background-color: var(--acao);
 }
