--- a/ABICCA-WEB/src/app/galeria/galeria.component.css
+++ b/ABICCA-WEB/src/app/galeria/galeria.component.css
@@ -6,7 +6,8 @@
     padding: 0;
     width: 100%;
     height: fit-content;
-    background-color: aliceblue;
+    background-color: #fff;
+    border-bottom: 1px solid black;
 }
 
 .separador {
@@ -23,23 +24,28 @@
 .separador h1{
     width: fit-content;
     height: fit-content;
-    background-image: linear-gradient(45deg, #00ced1, #084d6e);
+    background-image: var(--fundoSite);
     background-size: 100%;
     background-repeat: repeat;
-
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    -moz-background-clip: text;
+    background-clip: text;
     -moz-text-fill-color: transparent;
+}
+
+.containerImgs {
+  width: 60%;
+  margin: 0 auto;
+  border-bottom: 2px solid var(--primaria);
 }
 
 .carousel-container {
     position: relative;
-    margin: auto;
+    margin: 0 auto 25px;
     text-align: center;
     width: 700px;
     border-radius: 15px;
-    box-shadow: 0px 8px 16px #dce1e1;
+    box-shadow: 0px 8px 16px var(--secundaria);
 }
 
 .carousel-container img{
@@ -69,7 +75,7 @@
     height: 13px;
     width: 13px;
     margin: 0 5px;
-    background-color: #fff;
+    background-color: var(--destaque);
     border-radius: 50%;
     display: inline-block;
     transition: opacity 0.6s ease;
@@ -78,6 +84,7 @@
 
 .active,
 .dot:hover {
+    background-color: var(--acao);
     opacity: 1;
 }
 
@@ -120,12 +127,13 @@
 }
 
 .icon-carousel {
-  color: #fff;
+  color: var(--destaque);
   opacity: 0.5;
   transition: all 0.15s ease;
 }
 
 .icon-carousel:hover {
+  color: var(--acao);
   opacity: 0.9;
 }
 
