--- a/ABICCA-WEB/src/app/imagens/imagens.component.css
+++ b/ABICCA-WEB/src/app/imagens/imagens.component.css
@@ -7,7 +7,7 @@
 .container {
     width: 100%;
     height: 200px;
-    background: linear-gradient(125deg, #00ced1, #084d6e);
+    /* background: linear-gradient(125deg, #00ced1, #084d6e); */
     display: flex;
     justify-content: space-between;
     align-items: center;
