--- a/ABICCA-WEB/src/app/sobre/sobre.component.css
+++ b/ABICCA-WEB/src/app/sobre/sobre.component.css
@@ -1,39 +1,39 @@
 .container {
     padding: 20px;
-    background: linear-gradient(to right, #55d48a, #404180);  
+    /* background: linear-gradient(to right, #55d48a, #404180);   */
+    background-color: var(--neutra);
     height: auto;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgb(0, 255, 42);
-    display: flex; 
-    justify-content: space-between; 
-    margin-bottom: 20px;
-    border: 1px solid transparent; 
+    display: flex;
+    justify-content: space-between;
     box-sizing: border-box;
 }
 
 .column {
-    flex: 1; 
-    margin: 0 10px; 
-    min-width: 250px; 
+    flex: 1;
+    margin: 0 10px;
+    min-width: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .text {
-    max-width: 100%; 
-    overflow: auto; 
-    background: #ffffff;
-    padding: 15px;
-    border-radius: 5px;
+    max-width: 100%;
+    overflow: auto;
+    /* background: #ffffff; */
 }
 
 h5 {
-    color: rgb(0, 255, 42);
-    margin: 10px 0; 
-    text-align: center;  
+    background-image: var(--fundoSite);
+    color: transparent;
+    margin: 10px 0;
+    text-align: center;
     width: 100%;
     font-weight: bold;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -moz-text-fill-color: transparent;
 }
 
 .img{
