Adicionado o campo noticia e campo corrente meio da página

--- a/ABICCA-WEB/src/app/rodape/rodape.component.css
+++ b/ABICCA-WEB/src/app/rodape/rodape.component.css
@@ -16,7 +16,7 @@ footer {
     padding: 40px 0;
 }
 
-footer .line-footer1 {+
+footer .line-footer1 {
     text-align:center;
     border-bottom: 1px solid white;
     padding-bottom: 40px;
