--- a/ABICCA-WEB/src/app/app.component.html
+++ b/ABICCA-WEB/src/app/app.component.html
@@ -6,12 +6,15 @@
 
 <div class="corpo">
   <app-imagens></app-imagens>
+  <app-noticias></app-noticias>
+  <app-navio></app-navio>
   <app-sobre></app-sobre>
   <app-associados></app-associados>
   <app-galeria [images]="images"
     [autoSlide]="false"
     [controls]="false"
   ></app-galeria>
+  
 </div>
 
 <app-rodape></app-rodape>
