--- a/ABICCA-WEB/src/styles.css
+++ b/ABICCA-WEB/src/styles.css
@@ -1,4 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --primaria: #00CED1;
+    --secundaria: #084D6E;
+    --terciaria: #000850;
+    --destaque: #333333;
+    --neutra: #F5F5F5;
+    --acao: #FF6F30;
+    --texto1: #f5f5f5;
+    --texto2: #a0a0a0;
+    --texto3: #164e63;
+
+  
+    --fundoSite: linear-gradient(125deg, #00ced1, #084d6e);
+  }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
