Adicionado componente para o campo da animação rodapé
Criado vetor de um balancinho com uma placa da A.B.I.C.C.A utilizando Inkscape e utilizado no campo vigente destas modificações.

--- a/ABICCA-WEB/src/app/animacao-rodape/animacao-rodape.component.html
+++ b/ABICCA-WEB/src/app/animacao-rodape/animacao-rodape.component.html
@@ -1,5 +1,12 @@
 <div class="corpo">
+  <div class="ponterolante">
+    <div class="cima-barra"></div>
+    <div class="fundo-barra"></div>
+    <div class="baixo-barra"></div>
+  </div>
   <div class="barrasuperior">
-    <img src="" alt="">
+    <div></div>
+    <img src="Elementos_Graficos/Balancinho_Abica.png" alt="">
+    <div></div>
   </div>
 </div>
