--- a/ABICCA-WEB/src/app/animacao-rodape/animacao-rodape.component.css
+++ b/ABICCA-WEB/src/app/animacao-rodape/animacao-rodape.component.css
@@ -1,9 +1,58 @@
 .corpo {
-  color: var(--neutra);
+  background-color: var(--neutra);
+  width: 100%;
+  /* border: 1px solid black; */
 }
+.ponterolante {
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  /* border: 1px solid black; */
+}
+
+.cima-barra,
+.fundo-barra,
+.baixo-barra {
+  width: 100%;
+  /* border: 1px solid black; */
+}
+
+.fundo-barra {
+  height: 30px;
+  background: #ffc90fff;
+}
+
+.cima-barra,
+.baixo-barra {
+  /* display: none; */
+  /* position: absolute; */
+  width: 100%;
+  height: 3px;
+  background: #daa800ff;
+  /* border: 1px solid black; */
+}
+
 .barrasuperior {
-  width: 50px;
-  height: 50px;
-
-
+  width: 100%;
+  height: 200px;
 }
+
+img {
+  position: relative;
+  margin-top: 10px;
+  animation: moverBalancinho 45s linear infinite;
+}
+
+
+@keyframes moverBalancinho {
+  0% {
+      left: 0px; /* Começa fora da tela à esquerda */
+  }
+  50% {
+      left: calc(100% - var(--tamanhoBalancinho)); /* Move para fora da tela à direita */
+  }
+  100% {
+    left: 0px; /* Começa fora da tela à esquerda */
+}
+}
+
