--- a/ABICCA-WEB/src/styles.css
+++ b/ABICCA-WEB/src/styles.css
@@ -11,6 +11,8 @@
 
   --fundoSite: linear-gradient(125deg, #00ced1, #084d6e);
   --fontDegrade1: linear-gradient(45deg, #f5f5f5, #a0a0a0);
+
+  --tamanhoBalancinho: 401px;
 }
 
 html, body {
