--- a/ABICCA-WEB/src/app/app.component.html
+++ b/ABICCA-WEB/src/app/app.component.html
@@ -4,19 +4,7 @@
     </div>
 </header>
 
-<div class="corpo">
-  <app-imagens></app-imagens>
-  <app-noticias></app-noticias>
-  <app-navio></app-navio>
-  <app-sobre></app-sobre>
-  <app-associados></app-associados>
-  <app-galeria [images]="images"
-    [autoSlide]="false"
-    [controls]="true"
-  ></app-galeria>
-  <app-animacao-rodape></app-animacao-rodape>
-</div>
+<router-outlet></router-outlet>
 
 <app-rodape></app-rodape>
 
-<router-outlet />
