feito a página associe-se

--- a/src/app/Components/Associese/associe-se/associe-se.component.html
+++ b/src/app/Components/Associese/associe-se/associe-se.component.html
@@ -1,3 +1,4 @@
 <app-seja-um-associado></app-seja-um-associado>
 <app-quem-pode-se-associar></app-quem-pode-se-associar>
 <app-direito-e-deveres></app-direito-e-deveres>
+<app-formulario></app-formulario>
