--- a/src/app/Components/Associese/direito-e-deveres/direito-e-deveres.component.html
+++ b/src/app/Components/Associese/direito-e-deveres/direito-e-deveres.component.html
@@ -1,20 +1,27 @@
 <div class="container">
-    <h1>Direitos e Deveres</h1>
-    <ul>
-        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio omnis magni iure atque repudiandae
-            doloremque quis perferendis voluptates ab blanditiis laborum nemo ea, quidem, aliquam, exercitationem sint
-            hic asperiores nihil?</li>
-        <li>Veniam et, aspernatur molestiae culpa adipisci dicta voluptatem labore expedita, nulla esse nam ipsum illum.
-            Alias possimus natus, accusamus aperiam iusto, culpa, veniam dicta consectetur voluptatem laborum nemo
-            commodi provident.</li>
-        <li>Rem accusantium, ipsum nisi, quam id eos recusandae repellat velit incidunt, deserunt eius fugiat aliquam
-            molestias. Facere tempore harum est. Est voluptas in quam temporibus inventore magni quos distinctio
-            debitis.</li>
-        <li>Consequuntur nisi aut saepe aliquam itaque excepturi numquam libero, distinctio labore! Debitis dicta quam
-            atque, veniam suscipit alias veritatis. Alias rerum deleniti libero, ullam laudantium ipsum esse corrupti
-            iusto inventore.</li>
-        <li>Consequuntur nisi aut saepe aliquam itaque excepturi numquam libero, distinctio labore! Debitis dicta quam
-            atque, veniam suscipit alias veritatis. Alias rerum deleniti libero, ullam laudantium ipsum esse corrupti
-            iusto inventore.</li>
-    </ul>
+    <section aria-labelledby="direitos-deveres">
+        <header>
+            <h1 id="direitos-deveres">Direitos e Deveres</h1>
+        </header>
+
+        <article>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, mollitia. Sit animi quos tenetur,
+                    dolore eius nemo repellat at voluptates. Odio qui distinctio ipsam quia voluptatum veniam eligendi
+                    voluptatem harum!</li>
+
+                <li>Autem quae quidem soluta, minima aliquid quas dicta incidunt, dolorum amet mollitia doloremque error
+                    nobis! Saepe cum nam laudantium, quos, molestiae harum atque, optio soluta quo tenetur quae enim
+                    fugiat!</li>
+
+                <li>Illum, autem repudiandae! Vel incidunt quis sit rerum, quas minima repellendus, velit aliquid hic
+                    qui ratione cupiditate, sapiente quibusdam eum earum. Ad fugit repellat vitae dicta perspiciatis
+                    magnam quisquam voluptates!</li>
+
+                <li>Iure consequatur dignissimos necessitatibus nesciunt voluptas at quod tempore sapiente ab deserunt
+                    maiores esse veritatis reprehenderit, tempora porro delectus fugiat nostrum ullam exercitationem
+                    praesentium laboriosam! Consectetur perferendis ea suscipit esse!</li>
+            </ul>
+        </article>
+    </section>
 </div>
