--- a/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.html
+++ b/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.html
@@ -16,10 +16,10 @@
 
         <div class="box-line-footer">
             <div class="btn">
-                <a href="#" class="social-btn">Quem pode se associar?</a>
-                <a href="#" class="social-btn">Empresas Associadas</a>
-                <a href="#" class="social-btn">Direito e Deveres</a>
-                <a href="#" class="social-btn">Contatos</a>
+                <a class="social-btn">Quem pode se associar?</a>
+                <a class="social-btn">Empresas Associadas</a>
+                <a class="social-btn">Direito e Deveres</a>
+                <a class="social-btn">Contatos</a>
             </div>
         </div>
     </div>
