--- a/src/app/Components/Associese/direito-e-deveres/direito-e-deveres.component.css
+++ b/src/app/Components/Associese/direito-e-deveres/direito-e-deveres.component.css
@@ -1,8 +1,54 @@
-*{
+* {
     box-sizing: border-box;
-    background-color: var(--neutra);
+    margin: 0;
+    padding: 0;
+    background-color: var(--quarta);
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
 }
 
-.text{
-    
+.container {
+    max-width: 1500px;
+    margin: -49px auto 0 ;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
+
+header h1{ 
+    font-size: 40px;
+    margin: 0;
+    padding: 20px 0;
+    font-weight: bold;
+    /* color: var(--texto3); */
+    color: #5D4037  ;
+    margin-bottom: 20px;
+}
+
+article ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+article ul li {
+    font-size: 18px;
+    color: black ;
+    margin-bottom: 15px;
+}
+
+/* Responsividade para dispositivos menores */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    header h1 {
+        font-size: 30px;
+    }
+
+    article ul li {
+        font-size: 16px;
+    }
+} -->
