--- a/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.css
+++ b/src/app/Components/Associese/seja-um-associado/seja-um-associado.component.css
@@ -8,7 +8,8 @@
     justify-content: space-between;
     align-items: flex-start;
     max-width: 1200px;
-    margin: auto;
+    margin: 0px auto -50px auto;
+    height: 480px;
 }
 
 section {
@@ -21,6 +22,7 @@ section {
     font-size: 40px;
     font-weight: bold;
     color: #003366; 
+    margin: 20px auto 05px;
 }
 
 section p {
