Adição inicial autenticador login

--- a/src/app/Components/rodape/rodape.component.css
+++ b/src/app/Components/rodape/rodape.component.css
@@ -67,6 +67,7 @@ footer .line-footer2 {
 .line-footer1 form input[type=submit] {
     width: 80px;
     height: 40px;
+    font-size: 1rem;
     background-color: red;
     border: 0;
     color: white;
