--- a/src/app/Components/menu-nav/menu-nav.component.html
+++ b/src/app/Components/menu-nav/menu-nav.component.html
@@ -8,6 +8,7 @@
         <!-- <a mat-button routerLink="/galeria">Galeria</a> -->
         <a mat-button routerLink="/contatos">Contato</a>
         <a class="associe" mat-button>Associe-se</a>
+        <a *ngIf="sair" (click)="Sair()" class="signOut" mat-button>Sair</a>
     </div>
 
 </mat-toolbar>
