--- a/src/app/Administracao/login/login.component.html
+++ b/src/app/Administracao/login/login.component.html
@@ -1,10 +1,33 @@
-<amplify-authenticator [loginMechanisms]="['email']" [formFields]="formFields" [signUpAttributes]="['name']">
+<amplify-authenticator [loginMechanisms]="['email']" [formFields]="formFields" [signUpAttributes]="['name']" [hideSignUp]="true">
+  <ng-template amplifySlot="verify-user-header">
+    <h3
+      class="amplify-heading"
+      style="padding: var(--amplify-space-xl) 0 0 var(--amplify-space-xl)"
+    >
+      Enter Information:
+    </h3>
+  </ng-template>
+
+  <ng-template amplifySlot="verify-user-footer">
+    <div>Footer Information</div>
+  </ng-template>
+  <ng-template amplifySlot="confirm-verify-user-header">
+    <h3
+      class="amplify-heading"
+      style="padding: var(--amplify-space-xl) 0 0 var(--amplify-space-xl)"
+    >
+      Enter Information:
+    </h3>
+  </ng-template>
+
+  <ng-template amplifySlot="confirm-verify-user-footer">
+    <div>Footer Information</div>
+  </ng-template>
   <ng-template
     amplifySlot="authenticated"
     let-user="user"
     let-signOut="signOut"
   >
-    <h1>Welcome {{ user.username }}!</h1>
-    <button (click)="signOut()">Sign Out</button>
+    <app-corpo-login></app-corpo-login>
   </ng-template>
 </amplify-authenticator>
