--- a/src/app/Administracao/corpo-login/corpo-login.component.html
+++ b/src/app/Administracao/corpo-login/corpo-login.component.html
@@ -1,1 +1,42 @@
-<img [src]="image" alt="">
+<!-- <img [src]="image" alt=""> -->
+
+<div class="table-container">
+  <table mat-table [dataSource]="dataSource" matSort>
+
+    <!-- Definição das Colunas -->
+    <ng-container matColumnDef="ABICCA_id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.ABICCA_id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="titulo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Titulo </th>
+      <td mat-cell *matCellDef="let element"> {{element.titulo}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="data">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
+      <td mat-cell *matCellDef="let element"> {{element.data}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="descricao">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Descrição </th>
+      <td mat-cell *matCellDef="let element"> {{element.descricao}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="link_Imgs">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Link Imagens </th>
+      <td mat-cell *matCellDef="let element"> {{element.link_Imgs}} </td>
+    </ng-container>
+
+    <!-- Cabeçalho e Corpo da Tabela -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <!-- Paginador -->
+  <!-- <mat-paginator [length]="100"
+                 [pageSize]="10"
+                 [pageSizeOptions]="[5, 10, 25, 100]">
+  </mat-paginator> -->
+</div>
