criado a página noticias

--- a/src/app/Components/menu-nav/menu-nav.component.html
+++ b/src/app/Components/menu-nav/menu-nav.component.html
@@ -3,7 +3,7 @@
 
     <div class="buttons">
         <a mat-button routerLink="/home">Home</a>
-        <a mat-button routerLink="/noticias">Noticias</a>
+        <a mat-button routerLink="/noticia">Noticias</a>
         <a mat-button routerLink="/sobrenos">Sobre nós</a>
         <!-- <a mat-button routerLink="/galeria">Galeria</a> -->
         <a mat-button routerLink="/contatos">Contato</a>
