--- a/src/app/Administracao/corpo-login/corpo-login.component.html
+++ b/src/app/Administracao/corpo-login/corpo-login.component.html
@@ -1,9 +1,9 @@
-<!-- <img [src]="image" alt=""> -->
-
 <div class="table-container">
-  <table mat-table [dataSource]="dataSource" matSort>
+  <button mat-icon-button (click)="openFormModal()">
+    <mat-icon>add</mat-icon> <!-- Ícone de adicionar -->
+  </button>
 
-    <!-- Definição das Colunas -->
+  <table mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="ABICCA_id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
       <td mat-cell *matCellDef="let element"> {{element.ABICCA_id}} </td>
@@ -26,17 +26,44 @@
 
     <ng-container matColumnDef="link_Imgs">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Link Imagens </th>
-      <td mat-cell *matCellDef="let element"> {{element.link_Imgs}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.link_Imgs.join(', ')}} </td>
     </ng-container>
 
-    <!-- Cabeçalho e Corpo da Tabela -->
+    <ng-container matColumnDef="actions" class="mat-column-actions">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Ações </th>
+      <td mat-cell *matCellDef="let element">
+        <div class="botoes">
+          <button mat-icon-button (click)="openFormModal(element)">
+            <mat-icon>edit</mat-icon> <!-- Ícone de editar -->
+          </button>
+          <button mat-icon-button (click)="onDelete(element)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
+  <!-- <form *ngIf="isFormVisible" (ngSubmit)="onSubmit()">
+    <label for="titulo">Título:</label>
+    <input id="titulo" [(ngModel)]="newItem.titulo" name="titulo" required>
+
+    <label for="data">Data:</label>
+    <input id="data" [(ngModel)]="newItem.data" name="data" required>
+
+    <label for="descricao">Descrição:</label>
+    <textarea id="descricao" [(ngModel)]="newItem.descricao" name="descricao" required></textarea>
+
+    <label for="link_imgs">Link Imagens (separados por ponto e vírgula):</label>
+    <input id="link_imgs" [(ngModel)]="newItem.link_Imgs" name="link_imgs" required placeholder="Ex: link1.jpg; link2.jpg">
+
+    <button type="submit" class="button">{{ newItem.ABICCA_id ? 'Atualizar Item' : 'Adicionar Item' }}</button>
+    <button type="button" class="button" (click)="isFormVisible = false">Cancelar</button>
+  </form> -->
+
   <!-- Paginador -->
-  <!-- <mat-paginator [length]="100"
-                 [pageSize]="10"
-                 [pageSizeOptions]="[5, 10, 25, 100]">
-  </mat-paginator> -->
+  <!-- <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator> -->
 </div>
