--- a/src/app/Administracao/corpo-login/form-modal/form-modal.component.html
+++ b/src/app/Administracao/corpo-login/form-modal/form-modal.component.html
@@ -9,15 +9,15 @@
       <mat-label>Data</mat-label>
       <input matInput [(ngModel)]="newItem.data" name="data" required>
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field class="input-desc">
       <mat-label>Descrição</mat-label>
-      <textarea matInput [(ngModel)]="newItem.descricao" name="descricao" required></textarea>
+      <textarea class="caixa-texto" matInput [(ngModel)]="newItem.descricao" name="descricao" required></textarea>
     </mat-form-field>
     <mat-form-field>
       <mat-label>Links de Imagens</mat-label>
       <input matInput [(ngModel)]="newItem.link_Imgs" name="link_Imgs" required>
     </mat-form-field>
-    <button mat-button type="submit">Salvar</button>
+    <button mat-button type="submit">{{ newItem.ABICCA_id ? 'Atualizar Item' : 'Adicionar Item' }}</button>
     <button mat-button type="button" (click)="onCancel()">Cancelar</button>
   </form>
 </mat-dialog-content>
