Reparo de links de rotas e modificação dos componentes Noticia e Noticias para ser condizentes aos nomes

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="corpo">
   <app-imagens></app-imagens>
-  <app-noticias></app-noticias>
+  <app-noticia></app-noticia>
   <app-navio></app-navio>
   <app-sobre></app-sobre>
   <app-associados></app-associados>
