--- a/src/app/Components/menu-nav/menu-nav.component.html
+++ b/src/app/Components/menu-nav/menu-nav.component.html
@@ -3,11 +3,11 @@
 
     <div class="buttons">
         <a mat-button routerLink="/home">Home</a>
-        <a mat-button routerLink="/noticia">Noticias</a>
+        <a mat-button routerLink="/noticias">Noticias</a>
         <a mat-button routerLink="/sobrenos">Sobre nós</a>
         <!-- <a mat-button routerLink="/galeria">Galeria</a> -->
-        <a mat-button routerLink="/contatos">Contato</a>
-        <a class="associe" mat-button>Associe-se</a>
+        <a mat-button routerLink="/contato">Contato</a>
+        <a class="associe" mat-button routerLink="/associese">Associe-se</a>
         <a *ngIf="sair" (click)="Sair()" class="signOut" mat-button>Sair</a>
     </div>
 
