--- a/src/app/Components/noticias/noticias.component.html
+++ b/src/app/Components/noticias/noticias.component.html
@@ -1,48 +1,1 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-
-<div class="container">
-    <div class="row">
-        <div class="header">
-            <h1>Notícias</h1>
-        </div>
-
-        <div class="content">
-            <div class="card">
-                <a href="#"><img src="lankhorst_euronete_brasil_logo.png" alt="Lankhorst Euronete Brasil" />
-                <h4>Lorem ipsum dolor</h4></a>
-                <div class="date-container">
-                    <i class="bi bi-clock-history"></i>
-                    <span>14/10/2024</span>
-                </div>
-                <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sed porro expedita accusantium vel quaerat distinctio laboriosam aut blanditiis qui.</p>
-            </div>
-            <div class="card">
-                <a href="#"><img src="VAN_BEEST.png" alt="VAN BEEST" />
-                <h4>Lorem ipsum dolor</h4></a>
-                <div class="date-container">
-                    <i class="bi bi-clock-history"></i>
-                    <span>14/10/2024</span>
-                </div>
-                <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sed porro expedita accusantium vel quaerat distinctio laboriosam aut blanditiis qui.</p>
-            </div>
-            <div class="card">
-                <a href="#"><img src="VAN_BEEST.png" alt="VAN BEEST" />
-                <h4>Lorem ipsum dolor</h4></a>
-                <div class="date-container">
-                    <i class="bi bi-clock-history"></i>
-                    <span>14/10/2024</span>
-                </div>
-                <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sed porro expedita accusantium vel quaerat distinctio laboriosam aut blanditiis qui.</p>
-            </div>
-            <div class="card">
-                <a href="#"><img src="TEIJIN.png" alt="TEIJIN" />
-                <h4>Lorem ipsum dolor</h4></a>
-                <div class="date-container">
-                    <i class="bi bi-clock-history"></i>
-                    <span>14/10/2024</span>
-                </div>
-                <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sed porro expedita accusantium vel quaerat distinctio laboriosam aut blanditiis qui.!</p>
-            </div>
-        </div>
-    </div>
-</div>
+<app-blog></app-blog>
