--- a/src/app/Components/noticias/blog/blog.component.css
+++ b/src/app/Components/noticias/blog/blog.component.css
@@ -16,6 +16,11 @@
     grid-template-columns: repeat(2, 1fr); /* Duas colunas para as notícias */
     gap: 20px; /* Espaçamento entre as notícias */
     justify-content: center;
+    border: 1px solid black;
+}
+
+.item-list {
+  border: 1px solid black;
 }
 
 .noticia {
@@ -29,6 +34,7 @@
     align-items: center; /* Alinha o conteúdo verticalmente */
     max-width: 500px; /* Tamanho máximo da div de notícias */
     height: 200px; /* Altura fixa menor */
+    border: 1px solid black;
 }
 
 .noticia:hover {
