--- a/src/app/Administracao/corpo-login/form-modal/form-modal.component.html
+++ b/src/app/Administracao/corpo-login/form-modal/form-modal.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{ newItem.ABICCA_id ? 'Editar Item' : 'Adicionar Item' }}</h2>
+<h2 mat-dialog-title>{{ newItem.id ? 'Editar Item' : 'Adicionar Item' }}</h2>
 <mat-dialog-content>
   <form (ngSubmit)="onSubmit()">
     <mat-form-field>
@@ -17,7 +17,7 @@
       <mat-label>Links de Imagens</mat-label>
       <input matInput [(ngModel)]="newItem.link_Imgs" name="link_Imgs" required>
     </mat-form-field>
-    <button mat-button type="submit">{{ newItem.ABICCA_id ? 'Atualizar Item' : 'Adicionar Item' }}</button>
+    <button mat-button type="submit">{{ newItem.id ? 'Atualizar Item' : 'Adicionar Item' }}</button>
     <button mat-button type="button" (click)="onCancel()">Cancelar</button>
   </form>
 </mat-dialog-content>
