--- a/src/app/Components/noticias/blog/blog.component.css
+++ b/src/app/Components/noticias/blog/blog.component.css
@@ -13,14 +13,15 @@
 
 .grid-container {
     display: grid;
+    min-height: 460px;
     grid-template-columns: repeat(2, 1fr); /* Duas colunas para as notícias */
     gap: 20px; /* Espaçamento entre as notícias */
     justify-content: center;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .item-list {
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .noticia {
@@ -34,7 +35,7 @@
     align-items: center; /* Alinha o conteúdo verticalmente */
     max-width: 500px; /* Tamanho máximo da div de notícias */
     height: 200px; /* Altura fixa menor */
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .noticia:hover {
