Estilização das noticias e criado popup para visualizar noticia completa

--- a/src/app/Components/noticias/blog/blog.component.css
+++ b/src/app/Components/noticias/blog/blog.component.css
@@ -63,7 +63,8 @@
 
 .texto h3 {
     font-size: 1.2rem; /* Aumentando o tamanho da fonte do título */
-    margin-bottom: 8px; /* Aumentando a margem inferior */
+    margin-bottom: 8px;
+    line-height: 1.5em;
 }
 
 .texto p {
@@ -77,6 +78,14 @@
 
 .texto a:hover {
     text-decoration: underline;
+}
+
+a:hover {
+    cursor: pointer;
+}
+
+.popup-noticia .mat-dialog-container{
+    border: 10px solid black;
 }
 
 /* Estilo de paginação */
