--- a/src/app/Components/noticias/noticias.component.html
+++ b/src/app/Components/noticias/noticias.component.html
@@ -1,1 +1,1 @@
-<app-blog [DATA]="DATA" [listPagnation]="listPagnation"></app-blog>
+<app-blog *ngIf="showItens()" [DATA]="DATA" [listPagnation]="listPagnation"></app-blog>
