--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,11 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Merriweather', serif; /* Fontes para os títulos */
 }
 
-/* .mat-dialog-container {
-  max-width: none;
-  max-height: none;
-} */
+.popup-noticia .mat-mdc-dialog-container {
+  --mdc-dialog-container-shape: 5px;
+  max-width: calc(100% - 100px);
+  max-height: calc(100% - 50px);
+  margin-left: auto;
+  width: fit-content;
+  height: fit-content;
+}
