--- a/src/app/Components/noticias/popup-noticia/popup-noticia.component.html
+++ b/src/app/Components/noticias/popup-noticia/popup-noticia.component.html
@@ -3,11 +3,12 @@
         <img [src]="item.link_Imgs[0]" alt="" class="imagem">
     </div>
     <div class="direita">
-        <h1 class="titulo">{{item.titulo}}</h1>
-        <div class="data">
-            <i class="bi bi-clock-history"></i>
-            <span class="data-text">{{item.data}}</span>
-        </div>
-        <p class="descricao">{{item.descricao}}</p>
+      <span class="titulo">{{item.titulo}}</span>
+      <div class="data">
+          <i class="bi bi-clock-history"></i>
+          <span class="data-text">{{item.data}}</span>
+      </div>
+      <div class="descricao" #descricaoRef>{{item.descricao}}</div>
+      <div class="scroll-indicator" *ngIf="isScrollable">&#x2193;</div> <!-- Seta para baixo -->
     </div>
 </div>
