--- a/src/app/Components/menu-nav/menu-nav.component.html
+++ b/src/app/Components/menu-nav/menu-nav.component.html
@@ -1,14 +1,14 @@
 <mat-toolbar class="toolbar">
-    <img class="abicca" src="ABICCA.png" alt="LogoABICCA">
+    <img class="abicca" src="LogoABICCA2.png" alt="LogoABICCA">
 
     <div class="buttons">
-        <a mat-button routerLink="/home">Home</a>
-        <a mat-button routerLink="/noticias">Noticias</a>
-        <a mat-button routerLink="/sobrenos">Sobre nós</a>
-        <!-- <a mat-button routerLink="/galeria">Galeria</a> -->
-        <a mat-button routerLink="/contato">Contato</a>
-        <a class="associe" mat-button routerLink="/associese">Associe-se</a>
-        <a *ngIf="sair" (click)="Sair()" class="signOut" mat-button>Sair</a>
+        <a mat-button routerLink="/home"><p>Home</p></a>
+        <a mat-button routerLink="/noticias"><p>Noticias</p></a>
+        <a mat-button routerLink="/sobrenos"><p>Sobre nós</p></a>
+        <!-- <a mat-button routerLink="/galeria"><p>Galeria</p></a> -->
+        <a mat-button routerLink="/contato"><p>Contato</p></a>
+        <a class="associe" mat-button routerLink="/associese"><p>Associe-se</p></a>
+        <a *ngIf="sair" (click)="Sair()" class="signOut" mat-button><p>Sair</p></a>
     </div>
 
 </mat-toolbar>
