--- a/src/app/Components/associados/associados.component.css
+++ b/src/app/Components/associados/associados.component.css
@@ -1,79 +1,95 @@
 .container {
-    display: flex;
-    width: 100%;
-    height: 600px;
-    justify-content: center;
-    row-gap: 20px;
-    flex-direction: column;
-    /* background-color: #00ced1; */
+  display: flex;
+  width: 100%;
+  height: 600px;
+  justify-content: center;
+  row-gap: 20px;
+  flex-direction: column;
+  /* background-color: #00ced1; */
 }
 
 .imagem {
-    align-self: center;
-    width: 100%;
+  align-self: center;
+  width: 100%;
+  /* background-color: var(--neutra); */
 }
 
 .imagem h1{
-    text-align: center;
-    font-variant: small-caps;
-    line-height: 1.5;
-    letter-spacing: normal;
+  text-align: center;
+  font-variant: small-caps;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: var(--neutra);
+  width: 300px;
+  padding: 0;
+  margin: 0 auto 10px;
 
-    background-image: var(--fontDegrade1);
-    background-size: 100%;
-    background-repeat: repeat;
+  /* background-image: var(--fontDegrade1);
+  background-size: 100%;
+  background-repeat: repeat;
 
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    -moz-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  -moz-text-fill-color: transparent; */
+
+  border-bottom: 2px solid var(--neutra);
+
 }
 
 .imagem_ord {
-    display: flex;
-    column-gap:auto;
-    justify-content: center;
+  display: flex;
+  column-gap:2%;
+  justify-content: center;
+}
+
+.imagem_ord img{
+  background-color: var(--neutra);
+  padding: 5px;
+  border-radius: 10px;
 }
 
 .texto {
-    width: 100%;
-    align-self: center;
+  width: 100%;
+  align-self: center;
 }
 
 .texto h5 {
-    margin-bottom: 20px;
-    text-align: center;
-    line-height: 1.5;
-    letter-spacing: normal;
+  margin-bottom: 20px;
+  text-align: center;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: var(--neutra);
 
-    background-image: var(--fontDegrade1);
-    background-size: 100%;
-    background-repeat: repeat;
+  /* background-image: var(--fontDegrade1);
+  background-size: 100%;
+  background-repeat: repeat;
 
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    -moz-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  -moz-text-fill-color: transparent; */
 }
 
 .texto p {
-    text-align: justify;
-    font-size: 1.2rem;
-    margin-top: 15px;
-    line-height: 1.5;
-    letter-spacing: normal;
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+  text-align: justify;
+  font-size: 1.2rem;
+  margin-top: 15px;
+  line-height: 1.5;
+  letter-spacing: normal;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  color: var(--neutra);
 
-    background-image: var(--fontDegrade1);
-    background-size: 100%;
-    background-repeat: repeat;
+  /* background-image: var(--fontDegrade1);
+  background-size: 100%;
+  background-repeat: repeat;
 
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    -moz-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  -moz-text-fill-color: transparent; */
 }
 
 
@@ -82,12 +98,14 @@
     display: flex;
     width: fit-content;
     margin: 0 auto 20px;
-    background: var(--texto1);
+    background: var(--primaria);
     box-shadow: 0 1px 12px var(--primaria);
+    border: 1px solid var(--quarta);
 }
 
 .bttn-SM .texto {
-  color: var(--secundaria);
+  font-weight: bold;
+  color: var(--quarta);
 }
 
 
@@ -101,5 +119,5 @@ p::first-letter {
 }
 
 .bttn-SM:hover {
-    background-color: var(--acao);
+    background-color: var(--terciaria);
 }
