--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -2,9 +2,11 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  background-image: linear-gradient(135deg, var(--primaria), var(--secundaria), var(--terciaria));
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-image: linear-gradient(135deg, var(--primaria), var(--secundaria), var(--terciaria)); */
+  background-image: var(--pattern1);
+  /* background-size: cover; */
+  background-repeat: repeat;
+  /* background-attachment: fixed; */
   background-position: center;
+  background-color: var(--terciaria);
 }
