--- a/src/app/Components/associados/associados.component.html
+++ b/src/app/Components/associados/associados.component.html
@@ -11,14 +11,14 @@
     </div>
     <div class="texto">
         <h5>Por que se associar à A.B.I.C.C.A?</h5>
-        <p>Associados participam ativamente das decisões estratégicas e integram comissões temáticas.<br>
+        <p class="descricao">Associados participam ativamente das decisões estratégicas e integram comissões temáticas.<br>
             Tenha acesso a informações relevantes sobre o mercado.<br>
             Apoio da Abicca em ações de defesa contra concorrência desleal e importações prejudiciais.<br>
             Tenha representatividade junto a órgãos governamentais.<br>
         </p>
 
-        <button class="bttn-SM" mat-button>
-          <span class="texto">Saiba mais</span>
+        <button class="bttn-SM" mat-button routerLink="/associese">
+          <span><p class="texto2">SAIBA MAIS</p></span>
         </button>
     </div>
 </div>
