--- a/src/app/Components/menu-nav/menu-nav.component.html
+++ b/src/app/Components/menu-nav/menu-nav.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar class="toolbar">
-    <img class="abicca" src="LogoABICCA2.png" alt="LogoABICCA">
+    <img class="abicca" src="LogoABICCA2.png" alt="LogoABICCA" mat-button routerLink="/home">
 
     <div class="buttons">
-        <a mat-button routerLink="/home"><p>Home</p></a>
+        <!-- <a mat-button routerLink="/home"><p>Home</p></a> -->
         <a mat-button routerLink="/noticias"><p>Noticias</p></a>
         <a mat-button routerLink="/sobrenos"><p>Sobre nós</p></a>
         <!-- <a mat-button routerLink="/galeria"><p>Galeria</p></a> -->
