--- a/src/app/Components/rodape/rodape.component.html
+++ b/src/app/Components/rodape/rodape.component.html
@@ -1,12 +1,11 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
 <!-- fontes -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"> -->
 
-
-<footer>
+<div class="footer">
     <div class="interface">
         <section class="line-footer1">
             <h2>Quer receber notícias sobre o mundo ABICCA?</h2>
@@ -19,7 +18,7 @@
 
         <div class="line-footer2">
             <div class="box-line-footer">
-                <img src="favicon.ico" alt="Logotipo ABICCA">
+                <img src="icone2.png" alt="Logotipo ABICCA">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus placeat,?</p>
             </div>
 
@@ -39,5 +38,4 @@
             </div>
         </div>
     </div>
-</footer>
-social-btn
+</div>
