--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
-<header>
-    <div class="cabecalho">
-        <app-menu-nav></app-menu-nav>
-    </div>
-</header>
+<app-menu-nav class="cabecalho"></app-menu-nav>
 
-<router-outlet></router-outlet>
+<router-outlet class="meio"></router-outlet>
 
 <app-rodape></app-rodape>
+
 
