--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,11 +20,15 @@ footer {
     width: 100%;
 }
 
+.meio {
+  height: fit-content;
+}
+
 
 .rodape {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(45deg, #00ced1, #084d6e);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(45deg, #00ced1, #084d6e);
 }
